--- a/PA1_template.Rmd
+++ b/PA1_template.Rmd
@@ -8,18 +8,87 @@ output:
 
 ## Loading and preprocessing the data
 
+file <-  "activity.zip"
+data <- read.csv(unz(file, "activity.csv"))
+data$steps <- as.numeric(data$steps)
+data$interval <- as.numeric(data$interval)
+data$date <- as.Date(data$date)
+total.steps.daily <- aggregate(steps ~ date, data=data, sum, na.rm=TRUE)
 
+
+install.packages("latticeExtra")
+library(latticeExtra)
+library(lattice)
+barchart(total.steps.daily$date ~ total.steps.daily$steps, 
+         main = "Total Steps each Day", 
+         xlab = "Total Steps", ylab = "Date")
+
+
+hist(total.steps.daily$steps)
 
 ## What is mean total number of steps taken per day?
 
 
+mean(total.steps.daily$steps)
+median(total.steps.daily$steps)
 
 ## What is the average daily activity pattern?
 
+average.steps.per.interval <- aggregate(steps ~ interval, data, mean)
+plot(average.steps.per.interval, type = "l", main = "Average daily activity pattern")
+
+
+subset(average.steps.per.interval, steps == max(steps))
+
+max.interval <- subset(average.steps.per.interval, steps == max(steps))
+
+abline(v = max.interval$interval, col = "green", lwd = 1)
+axis(1, at=max.interval$interval,labels=max.interval$interval, col="green")
 
 
 ## Imputing missing values
 
+sum(is.na(data))
 
+
+new.data <- merge(data, average.steps.per.interval, by = "interval", suffixes = c("", ".new"))
+na.steps <- is.na(new.data$steps)
+new.data$steps[na.steps] <- new.data$steps.new[na.steps]
+
+
+no.na.data <- new.data[, c(1:3)]
+
+
+
+total.steps.daily.no.na.data <- aggregate(steps ~ date, data=no.na.data, sum)
+## overlapping the two charts
+new.barchart <- barchart(total.steps.daily.no.na.data$date ~ total.steps.daily.no.na.data$steps, 
+                          main = "Total Steps each Day", 
+                         xlab = "Total Steps", ylab = "Date", col="red")
+original.barchart <- barchart(total.steps.daily$date ~ total.steps.daily$steps, 
+                              main = "Total Steps each Day", 
+                              xlab = "Total Steps", ylab = "Date", col="green")
+
+doubleYScale(new.barchart, original.barchart)
+
+mean(total.steps.daily.no.na.data$steps)
+
+median(total.steps.daily.no.na.data$steps)
+
+###because of the way we've mofidied the NA values, median and the mean coincide
+
+no.na.data$week <- weekdays(no.na.data$date)
+no.na.data$weekend.var <- no.na.data$week=="Sunday" | no.na.data$week=="Saturday"
+no.na.data$weekend.var[no.na.data$weekend.var==TRUE] <- "weekend"
+no.na.data$weekend.var[no.na.data$weekend.var==FALSE] <- "weekday"
+no.na.data$weekend.var <- as.factor(no.na.data$weekend.var)
 
 ## Are there differences in activity patterns between weekdays and weekends?
+
+no.na.data.day.type <- aggregate(data=no.na.data, steps ~ weekend.var + interval, mean)
+
+xyplot(data=no.na.data.day.type, steps ~ interval | weekend.var, type="l",
+  xlab="Interval",
+  ylab="Number of steps",
+  layout=c(1,2)
+)
